--- a/app/src/main/res/layout/widget_mess_menu.xml
+++ b/app/src/main/res/layout/widget_mess_menu.xml
@@ -3,7 +3,8 @@
     android:id="@+id/widgetRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/widget_bg"
+    android:textColor="@color/widget_text"
+    android:background="@color/widget_bg"
     android:orientation="vertical"
     android:padding="18dp">
 
